--- a/public/index_v01.html
+++ b/public/index_v01.html
@@ -20,11 +20,11 @@
   </head>
   <body>
     <script src="./code/highstock.js"></script>
-    <script src=".code/modules/exporting.js"></script>
-    <script src=".code/modules/accessibility.js"></script>
-    <div id="navigator-container"></div>
-    <div id="container"></div>
-    <div id="container_2"></div>
+    <script src="./code/modules/exporting.js"></script>
+    <script src="./code/modules/accessibility.js"></script>
+    <div id="navigator-container">navigator-container</div>
+    <div id="container">container</div>
+    <div id="container_2">container_2</div>
 
     <script type="text/javascript">
       (async () => {
