--- a/public/index_v10.html
+++ b/public/index_v10.html
@@ -71,14 +71,42 @@ https://cdn.jsdelivr.net/npm/bootstrap-alerts@1.2.2/bootstrap-alerts.min.js
             </div>
           </div>
           <div class="col p-2 d-flex align-items-center">
-            <button class="btn btn-sm btn-outline-secondary" type="button">
+            <button
+              class="btn btn-sm btn-outline-secondary"
+              type="button"
+              id="renderChartsBtn"
+            >
               開始繪圖
             </button>
           </div>
           <div class="col"></div>
         </div>
       </div>
-      <div id="chart-zone" class="container-fluid"></div>
+      <div id="chart-zone" class="container-fluid">
+        <div class="row" id="chart-nav"></div>
+        <div class="row chart-row" id="chart-row-1">
+          <div class="col stock-chart">
+            <div id="chart-1"></div>
+          </div>
+          <div class="col stock-chart">
+            <div id="chart-2"></div>
+          </div>
+          <div class="col stock-chart">
+            <div id="chart-3"></div>
+          </div>
+        </div>
+        <div class="row chart-row" id="chart-row-2">
+          <div class="col stock-chart">
+            <div id="chart-4"></div>
+          </div>
+          <div class="col stock-chart">
+            <div id="chart-5"></div>
+          </div>
+          <div class="col stock-chart">
+            <div id="chart-6"></div>
+          </div>
+        </div>
+      </div>
       <div id="info-zone"></div>
     </div>
   </body>
