--- a/public/index_v10.html
+++ b/public/index_v10.html
@@ -46,6 +46,7 @@ https://cdn.jsdelivr.net/npm/bootstrap-alerts@1.2.2/bootstrap-alerts.min.js
                 type="text"
                 class="form-control"
                 id="stock-code-search"
+                value="2330"
                 placeholder="股票代碼或名稱"
               />
               <button
@@ -85,25 +86,25 @@ https://cdn.jsdelivr.net/npm/bootstrap-alerts@1.2.2/bootstrap-alerts.min.js
       <div id="chart-zone" class="container-fluid">
         <div class="row" id="chart-nav"></div>
         <div class="row chart-row" id="chart-row-1">
-          <div class="col stock-chart">
-            <div id="chart-1"></div>
+          <div class="col-4 stock-chart">
+            <div id="chart-1" class="stock-chart"></div>
           </div>
-          <div class="col stock-chart">
-            <div id="chart-2"></div>
+          <div class="col-4 stock-chart">
+            <div id="chart-2" class="stock-chart"></div>
           </div>
-          <div class="col stock-chart">
-            <div id="chart-3"></div>
+          <div class="col-4 stock-chart">
+            <div id="chart-3" class="stock-chart"></div>
           </div>
         </div>
         <div class="row chart-row" id="chart-row-2">
-          <div class="col stock-chart">
-            <div id="chart-4"></div>
+          <div class="col-4 stock-chart">
+            <div id="chart-4" class="stock-chart"></div>
           </div>
-          <div class="col stock-chart">
-            <div id="chart-5"></div>
+          <div class="col-4 stock-chart">
+            <div id="chart-5" class="stock-chart"></div>
           </div>
-          <div class="col stock-chart">
-            <div id="chart-6"></div>
+          <div class="col-4 stock-chart">
+            <div id="chart-6" class="stock-chart"></div>
           </div>
         </div>
       </div>
